--- a/bai2.html
+++ b/bai2.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <form>
-      <span>RESERVATION</span>
-      <h1>Book your table</h1>
+      <h2>RESERVATION</h2>
+      <h3>Book your table</h3>
       <table>
         <tr>
           <td><input type="text" name="name" placeholder="name" /></td>
